feat!: new options page layout (#140)
* feat: new options page layout

* feat: add build tool info

* refactor: auto import react and react-router-dom presets

* test: try add e2e

* chore: remove direct dependency on `webextension-polyfill`

* fix: dynamic import of assets fails

* chore: simplified logs

* fix: i18n invalid

* fix: `webext-bridge` calls other than `handleEvent.ts` are invalidated

* fix(style): selected option is not highlighted

* test: add some test

* fix(test): headless mode not work

* build: support for grayscale icons in development mode

* build: enable biome vsc integration

* test: use playwright

* chore: fix ci

* chore: remove puppeteer deps

* chore: fix ci

* build: fix biome bug

* fix!: migration to wxt/storage, invalidate legacy storage

* build: static resource copying and icon generation with WxtModules

* feat: auto add furigana, rely `[lang='ja']`

* test: add popup page e2e test

* fix: theme switcher inaccuracy

* chore: remove useless code

* feat: supplement i18n

* style: adjust link color

--- a/assets/_locales/en/options.json
+++ b/assets/_locales/en/options.json
@@ -5,6 +5,7 @@
   "btnImportConfig": "Import Config",
   "footerCopyright": "Copyright © {{yearsRange}} <author/>.",
   "footerLicense": "Released under the <license/> license.",
+  "footerBuiltWith": "Built with <tool/>❤️.",
   "srGithub": "GitHub repository",
   "srToggleTheme": "Toggle Theme Mode",
   "titleWarning": "Warning!",
@@ -31,5 +32,17 @@
   "btnDelete": "Delete",
   "msgDeleteRule": "The deletion rule is not undoable, sure about this?",
   "markActive": "Active",
-  "markInactive": "Inactive"
+  "markInactive": "Inactive",
+  "navEditRules": "Rules editor",
+  "navChangelog": "Changelog",
+  "navAbout": "About",
+  "navOfficialSite": "Official site",
+  "navManageShortcuts": "Manage shortcuts",
+  "sidebarSponsor": "Sponsor developer",
+  "sidebarFirefoxSupport": "Firefox support",
+  "yourTips": "Your tips",
+  "manageShortcuts": "Manage shortcuts",
+  "errorPageTitle": "Oops!",
+  "errorPageGoBack": "Go back to the Home Page",
+  "errorPageTip": "Sorry, an unexpected error has occurred."
 }
