--- a/public/_locales/zh_CN/messages.json
+++ b/public/_locales/zh_CN/messages.json
@@ -16,5 +16,16 @@
   },
   "shortcutToggleFuriganaDisplay": {
     "message": "切换所有页面的注音假名显示模式"
+  },
+  "extTitleSuffix": {
+    "message": "自定义规则活跃中"
+  },
+  "contentScriptWarning": {
+    "message": "警告(Furigana Maker)：此页面过大($htmlSize$KB)，自动模式已禁用。",
+    "placeholders": {
+      "htmlSize": {
+        "content": "$1"
+      }
+    }
   }
 }
