--- a/public/_locales/zh_TW/messages.json
+++ b/public/_locales/zh_TW/messages.json
@@ -16,5 +16,16 @@
   },
   "shortcutToggleFuriganaDisplay": {
     "message": "切換所有頁面的注音假名顯示模式"
+  },
+  "extTitleSuffix": {
+    "message": "自定義規則活躍中"
+  },
+  "contentScriptWarning": {
+    "message": "警告(Furigana Maker)：此頁面過大($htmlSize$KB)，自動模式已禁用。",
+    "placeholders": {
+      "htmlSize": {
+        "content": "$1"
+      }
+    }
   }
 }
