test: add options page test (#153)
* test: assert that there are no uncaught errors

* chore: add sr-only text for get test handler

* test: add options page test

--- a/assets/_locales/en/options.json
+++ b/assets/_locales/en/options.json
@@ -39,6 +39,7 @@
   "navOfficialSite": "Official site",
   "navManageShortcuts": "Manage shortcuts",
   "sidebarSponsor": "Sponsor developer",
+  "srToggleSidebar": "Toggle sidebar show/hide",
   "yourTips": "Your tips",
   "manageShortcuts": "Manage shortcuts",
   "errorPageTitle": "Oops!",
