--- a/assets/_locales/ja/options.json
+++ b/assets/_locales/ja/options.json
@@ -39,6 +39,7 @@
   "navOfficialSite": "公式サイト",
   "navManageShortcuts": "ショートカットの管理",
   "sidebarSponsor": "開発者を支援",
+  "srToggleSidebar": "サイドバーの表示/非表示を切り替え",
   "yourTips": "ヒント",
   "manageShortcuts": "ショートカットの管理",
   "errorPageTitle": "おっと！",
