--- a/assets/_locales/ko/options.json
+++ b/assets/_locales/ko/options.json
@@ -39,6 +39,7 @@
   "navOfficialSite": "공식 사이트",
   "navManageShortcuts": "단축키 관리",
   "sidebarSponsor": "개발자 후원",
+  "srToggleSidebar": "사이드바 표시/숨김 전환",
   "yourTips": "당신의 팁",
   "manageShortcuts": "단축키 관리",
   "errorPageTitle": "이런!",
