--- a/assets/_locales/zh_CN/options.json
+++ b/assets/_locales/zh_CN/options.json
@@ -39,6 +39,7 @@
   "navOfficialSite": "官方网站",
   "navManageShortcuts": "管理快捷键",
   "sidebarSponsor": "赞助开发者",
+  "srToggleSidebar": "切换侧边栏显示/隐藏",
   "yourTips": "你的提示",
   "manageShortcuts": "管理快捷键",
   "errorPageTitle": "哎呀！",
