--- a/assets/_locales/zh_TW/options.json
+++ b/assets/_locales/zh_TW/options.json
@@ -39,6 +39,7 @@
   "navOfficialSite": "官方網站",
   "navManageShortcuts": "管理快捷鍵",
   "sidebarSponsor": "贊助開發者",
+  "srToggleSidebar": "切換側邊欄顯示/隱藏",
   "yourTips": "你的提示",
   "manageShortcuts": "管理快捷鍵",
   "errorPageTitle": "哎呀！",
