feat: add language switcher (#232)
* feat: add language switcher

* chore: remove useless Index signature

* feat: also controls the display language of popup and options

* refactor: rename i18n files

* style: add transition

* fix: re-rendering when language has not changed causes FOUC

* feat: completing i18n text

* fix: the default vite build target does not support top-level await

* feat: also modify html lang

* fix: language switcher not showing selected correctly

--- a/assets/_locales/en/translation.json
+++ b/assets/_locales/en/translation.json
@@ -1,4 +1,33 @@
 {
+  "extName": "Furigana Maker",
+  "btnAddFurigana": "Add Furigana",
+  "tipEscShortcut": "Press ESC to cancel",
+  "toggleAutoMode": "On-Off Auto Mode",
+  "tipRefreshPage": "Please refresh the page",
+  "toggleKanjiFilter": "On-Off Kanji Filter",
+  "tipFilterLevel": "Level is JLPT N5 & N4",
+  "optionAlwaysShow": "Always Show",
+  "optionNeverShow": "Never Show",
+  "optionHoverGap": "Hover Gap",
+  "optionHoverNoGap": "Hover No Gap",
+  "optionDefault": "Default",
+  "optionOriginal": "Original",
+  "optionParentheses": "Parentheses",
+  "tipCopyText": "Try copy Japanese text",
+  "optionHiragana": "Hiragana",
+  "optionKatakana": "Katakana",
+  "optionRomaji": "Romaji",
+  "labelAdjustFont": "Adjust furigana font size",
+  "btnSelectColor": "Select Color",
+  "btnReset": "Reset",
+  "btnClosePanel": "Close Picker Panel",
+  "linkEditRules": "Edit Rules",
+  "linkFeedback": "Feedback",
+  "linkSponsor": "Sponsor",
+  "tipOpenOptions": "Open the options page",
+  "tipOpenIssue": "Open an issue on GitHub",
+  "tipBuyMeACoffee": "Buy me a coffee☕",
+  "tipShareOn": "Share on {{media}}",
   "titleEditor": "User Rules Editor",
   "btnAddRule": "Add New Rule",
   "btnExportConfig": "Export Config",
@@ -35,7 +64,10 @@
   "markInactive": "Inactive",
   "navEditRules": "Rules editor",
   "navChangelog": "Changelog",
-  "navAbout": "About",
+  "navSettings": "Settings",
+  "navPopup": "Popup",
+  "settingsLanguage": "Interface language",
+  "settingsLanguageDesc": "This setting only affects the display language of Popup and Options pages. The rest of the text will only take effect after changing the browser language.",
   "navOfficialSite": "Official site",
   "navManageShortcuts": "Manage shortcuts",
   "sidebarSponsor": "Sponsor developer",
