--- a/assets/_locales/ja/translation.json
+++ b/assets/_locales/ja/translation.json
@@ -1,4 +1,33 @@
 {
+  "extName": "振り仮名メーカー",
+  "btnAddFurigana": "振り仮名を追加",
+  "tipEscShortcut": "ESCを押して追加をキャンセル",
+  "toggleAutoMode": "自動モード切替",
+  "tipRefreshPage": "後はページを更新",
+  "toggleKanjiFilter": "漢字フィルター切替",
+  "tipFilterLevel": "レベルはJLPT N5とN4",
+  "optionAlwaysShow": "常に表示",
+  "optionNeverShow": "表示しない",
+  "optionHoverGap": "ホバー（間隔あり）",
+  "optionHoverNoGap": "ホバー（間隔なし）",
+  "optionDefault": "デフォルト",
+  "optionOriginal": "元のテキスト",
+  "optionParentheses": "括弧を含む",
+  "tipCopyText": "日本語テキストをコピー",
+  "optionHiragana": "平仮名",
+  "optionKatakana": "片仮名",
+  "optionRomaji": "ローマ字",
+  "labelAdjustFont": "振り仮名のフォントサイズを調整",
+  "btnSelectColor": "色を選択",
+  "btnReset": "リセット",
+  "btnClosePanel": "ピッカーを閉じる",
+  "linkEditRules": "ルールを編集",
+  "linkFeedback": "フィードバック",
+  "linkSponsor": "開発者を支援",
+  "tipOpenOptions": "拡張機能オプションを開く",
+  "tipOpenIssue": "GitHubで問題を報告",
+  "tipBuyMeACoffee": "コーヒーをおごってください☕",
+  "tipShareOn": "{{media}} でシェア",
   "titleEditor": "ユーザールールエディター",
   "btnAddRule": "新しいルールを追加",
   "btnExportConfig": "設定をエクスポート",
@@ -35,7 +64,10 @@
   "markInactive": "非アクティブ",
   "navEditRules": "ルールエディタ",
   "navChangelog": "変更履歴",
-  "navAbout": "概要",
+  "navSettings": "設定",
+  "navPopup": "ポップアップ",
+  "settingsLanguage": "インターフェース言語",
+  "settingsLanguageDesc": "この設定は、ポップアップとオプションページの表示言語にのみ影響します。その他のテキストは、ブラウザの言語を変更した後にのみ有効になります。",
   "navOfficialSite": "公式サイト",
   "navManageShortcuts": "ショートカットの管理",
   "sidebarSponsor": "開発者を支援",
