--- a/assets/_locales/ko/translation.json
+++ b/assets/_locales/ko/translation.json
@@ -1,4 +1,33 @@
 {
+  "extName": "후리가나 메이커",
+  "btnAddFurigana": "루비 추가",
+  "tipEscShortcut": "ESC를 눌러 취소",
+  "toggleAutoMode": "자동 모드 켜기/끄기",
+  "tipRefreshPage": "전환 후 페이지 새로고침",
+  "toggleKanjiFilter": "한자 필터 켜기/끄기",
+  "tipFilterLevel": "레벨은 JLPT N5 & N4",
+  "optionAlwaysShow": "항상 표시",
+  "optionNeverShow": "절대 표시 안 함",
+  "optionHoverGap": "호버 간격 표시",
+  "optionHoverNoGap": "호버 간격 없음",
+  "optionDefault": "기본값",
+  "optionOriginal": "원본 텍스트",
+  "optionParentheses": "괄호 포함",
+  "tipCopyText": "일본어 텍스트 복사 시도",
+  "optionHiragana": "히라가나",
+  "optionKatakana": "가타카나",
+  "optionRomaji": "로마자",
+  "labelAdjustFont": "루비 글꼴 크기 조절",
+  "btnSelectColor": "글꼴 색상 선택",
+  "btnReset": "초기화",
+  "btnClosePanel": "패널 닫기",
+  "linkEditRules": "규칙 수정",
+  "linkFeedback": "피드백",
+  "linkSponsor": "개발자 후원",
+  "tipOpenOptions": "옵션 페이지 열기",
+  "tipOpenIssue": "GitHub에서 문제 제기",
+  "tipBuyMeACoffee": "커피 사주세요☕",
+  "tipShareOn": "{{media}}에 공유",
   "titleEditor": "사용자 규칙 편집기",
   "btnAddRule": "새로운 규칙 추가",
   "btnExportConfig": "설정 내보내기",
@@ -35,7 +64,10 @@
   "markInactive": "비활성화됨",
   "navEditRules": "규칙 편집기",
   "navChangelog": "변경 로그",
-  "navAbout": "정보",
+  "navSettings": "설정",
+  "navPopup": "팝업",
+  "settingsLanguage": "인터페이스 언어",
+  "settingsLanguageDesc": "이 설정은 팝업 및 옵션 페이지의 표시 언어에만 영향을 미칩니다. \n나머지 텍스트는 브라우저 언어를 변경한 후에만 적용됩니다.",
   "navOfficialSite": "공식 사이트",
   "navManageShortcuts": "단축키 관리",
   "sidebarSponsor": "개발자 후원",
