--- a/assets/_locales/zh_CN/translation.json
+++ b/assets/_locales/zh_CN/translation.json
@@ -1,4 +1,33 @@
 {
+  "extName": "注音假名生成器",
+  "btnAddFurigana": "添加注音假名",
+  "tipEscShortcut": "按下 ESC 键取消添加",
+  "toggleAutoMode": "开/关自动模式",
+  "tipRefreshPage": "切换后请刷新页面",
+  "toggleKanjiFilter": "开/关汉字过滤器",
+  "tipFilterLevel": "级别为 JLPT N5 & N4",
+  "optionAlwaysShow": "总是显示",
+  "optionNeverShow": "从不显示",
+  "optionHoverGap": "悬停显示有间隔",
+  "optionHoverNoGap": "悬停显示无间隔",
+  "optionDefault": "默认不处理",
+  "optionOriginal": "原始文本",
+  "optionParentheses": "包含括号",
+  "tipCopyText": "尝试复制日语文本",
+  "optionHiragana": "平假名",
+  "optionKatakana": "片假名",
+  "optionRomaji": "罗马字",
+  "labelAdjustFont": "调整假名字体大小",
+  "btnSelectColor": "选择字体颜色",
+  "btnReset": "重置",
+  "btnClosePanel": "关闭选择器面板",
+  "linkEditRules": "编辑规则",
+  "linkFeedback": "用户反馈",
+  "linkSponsor": "赞助开发者",
+  "tipOpenOptions": "打开插件选项页面",
+  "tipOpenIssue": "在 GitHub 上提交问题",
+  "tipBuyMeACoffee": "请我喝杯咖啡☕",
+  "tipShareOn": "分享到 {{media}}",
   "titleEditor": "用户规则编辑器",
   "btnAddRule": "添加新规则",
   "btnExportConfig": "导出配置",
@@ -35,7 +64,10 @@
   "markInactive": "未激活",
   "navEditRules": "规则编辑器",
   "navChangelog": "更新日志",
-  "navAbout": "关于",
+  "navSettings": "设置",
+  "navPopup": "弹出窗口",
+  "settingsLanguage": "界面语言",
+  "settingsLanguageDesc": "此设置仅影响弹出窗口和选项页面的显示语言。其余文本只有在更改浏览器语言后才会生效。",
   "navOfficialSite": "官方网站",
   "navManageShortcuts": "管理快捷键",
   "sidebarSponsor": "赞助开发者",
