--- a/assets/_locales/zh_TW/translation.json
+++ b/assets/_locales/zh_TW/translation.json
@@ -1,4 +1,33 @@
 {
+  "extName": "注音假名生成器",
+  "btnAddFurigana": "添加注音假名",
+  "tipEscShortcut": "按下 ESC 键取消添加",
+  "toggleAutoMode": "開/關自動模式",
+  "tipRefreshPage": "切換後請刷新頁面",
+  "toggleKanjiFilter": "開/關漢字過濾器",
+  "tipFilterLevel": "級別為 JLPT N5 & N4",
+  "optionAlwaysShow": "總是顯示",
+  "optionNeverShow": "從不顯示",
+  "optionHoverGap": "懸停顯示有間隔",
+  "optionHoverNoGap": "懸停顯示無間隔",
+  "optionDefault": "默認不處理",
+  "optionOriginal": "原始文本",
+  "optionParentheses": "包含括號",
+  "tipCopyText": "嘗試複製日語文本",
+  "optionHiragana": "平假名",
+  "optionKatakana": "片假名",
+  "optionRomaji": "羅馬字",
+  "labelAdjustFont": "調整假名字體大小",
+  "btnSelectColor": "選擇字體顏色",
+  "btnReset": "重置",
+  "btnClosePanel": "關閉選擇器面板",
+  "linkEditRules": "編輯規則",
+  "linkFeedback": "用戶反饋",
+  "linkSponsor": "贊助開發者",
+  "tipOpenOptions": "打開擴充功能選項頁面",
+  "tipOpenIssue": "在 GitHub 上提交問題",
+  "tipBuyMeACoffee": "請我喝杯咖啡☕",
+  "tipShareOn": "分享到 {{media}}",
   "titleEditor": "用戶規則編輯器",
   "btnAddRule": "添加新規則",
   "btnExportConfig": "導出配置",
@@ -35,7 +64,10 @@
   "markInactive": "未激活",
   "navEditRules": "規則編輯器",
   "navChangelog": "更新日誌",
-  "navAbout": "關於",
+  "navSettings": "設置",
+  "navPopup": "彈出窗口",
+  "settingsLanguage": "界面語言",
+  "settingsLanguageDesc": "此設置僅影響彈出窗口和選項頁面的顯示語言。其餘文本只有在更改瀏覽器語言後才會生效。",
   "navOfficialSite": "官方網站",
   "navManageShortcuts": "管理快捷鍵",
   "sidebarSponsor": "贊助開發者",
