--- a/assets/_locales/ko/translation.json
+++ b/assets/_locales/ko/translation.json
@@ -76,5 +76,16 @@
   "manageShortcuts": "단축키 관리",
   "errorPageTitle": "이런!",
   "errorPageGoBack": "홈페이지로 돌아가기",
-  "errorPageTip": "죄송합니다, 예기치 않은 오류가 발생했습니다."
+  "errorPageTip": "죄송합니다, 예기치 않은 오류가 발생했습니다.",
+  "btnAdd": "추가하다",
+  "btnClearAll": "모두 지우기",
+  "btnOK": "좋아요",
+  "dialogExcludeTitle": "도메인 제외",
+  "messageEmptyList": "목록이 비어 있습니다. 먼저 추가하세요.",
+  "settingsColoringKanji": "컬러링 한자",
+  "settingsColoringKanjiDesc": "페이지의 한자가 후리가나와 함께 색칠됩니다.",
+  "settingsDisableWarning": "경고 비활성화",
+  "settingsDisableWarningDesc": "더 이상 웹페이지에 \"페이지가 너무 큽니다\"라는 경고가 표시되지 않습니다.",
+  "settingsExclusionListDesc": "이 설정은 사용자 정의 규칙(규칙 편집기를 통해 편집됨)보다 우선합니다.",
+  "settingsExclusionList": "다음 사이트에서는 후리가나를 절대 추가하지 않습니다."
 }
