feat: set settings page as homepage (#243)
* feat: set settings page as homepage

* chore: fix e2e test

--- a/assets/_locales/en/translation.json
+++ b/assets/_locales/en/translation.json
@@ -21,7 +21,7 @@
   "btnSelectColor": "Select Color",
   "btnReset": "Reset",
   "btnClosePanel": "Close Picker Panel",
-  "linkEditRules": "Edit Rules",
+  "linkSettings": "More settings",
   "linkFeedback": "Feedback",
   "linkSponsor": "Sponsor",
   "tipOpenOptions": "Open the options page",
