--- a/assets/_locales/ja/translation.json
+++ b/assets/_locales/ja/translation.json
@@ -21,7 +21,7 @@
   "btnSelectColor": "色を選択",
   "btnReset": "リセット",
   "btnClosePanel": "ピッカーを閉じる",
-  "linkEditRules": "ルールを編集",
+  "linkSettings": "その他の設定",
   "linkFeedback": "フィードバック",
   "linkSponsor": "開発者を支援",
   "tipOpenOptions": "拡張機能オプションを開く",
