--- a/assets/_locales/ko/translation.json
+++ b/assets/_locales/ko/translation.json
@@ -21,7 +21,7 @@
   "btnSelectColor": "글꼴 색상 선택",
   "btnReset": "초기화",
   "btnClosePanel": "패널 닫기",
-  "linkEditRules": "규칙 수정",
+  "linkSettings": "추가 설정",
   "linkFeedback": "피드백",
   "linkSponsor": "개발자 후원",
   "tipOpenOptions": "옵션 페이지 열기",
