--- a/assets/_locales/zh-CN/translation.json
+++ b/assets/_locales/zh-CN/translation.json
@@ -21,7 +21,7 @@
   "btnSelectColor": "选择字体颜色",
   "btnReset": "重置",
   "btnClosePanel": "关闭选择器面板",
-  "linkEditRules": "编辑规则",
+  "linkSettings": "更多设置",
   "linkFeedback": "用户反馈",
   "linkSponsor": "赞助开发者",
   "tipOpenOptions": "打开插件选项页面",
