--- a/assets/_locales/zh-TW/translation.json
+++ b/assets/_locales/zh-TW/translation.json
@@ -28,7 +28,7 @@
   "footerLicense": "根據 <license/> 許可證發布。",
   "iGotIt": "我得到了它！",
   "labelAdjustFont": "調整注音字體大小",
-  "linkEditRules": "編輯規則",
+  "linkSettings": "更多設定",
   "linkFeedback": "回饋",
   "linkSponsor": "贊助",
   "manageShortcuts": "管理快捷方式",
