fix: "page is too large" warnings too frequent (#317)

--- a/packages/extension/public/_locales/en/messages.json
+++ b/packages/extension/public/_locales/en/messages.json
@@ -21,9 +21,9 @@
     "message": "Custom Rule Active"
   },
   "contentScriptWarning": {
-    "message": "Warning(Furigana Maker): This page is too large($htmlSize$KB), auto mode is disabled.",
+    "message": "Warning(Furigana Maker): This page is too large($textLength$ characters), auto mode is disabled.",
     "placeholders": {
-      "htmlSize": {
+      "textLength": {
         "content": "$1"
       }
     }
