--- a/packages/extension/public/_locales/zh_TW/messages.json
+++ b/packages/extension/public/_locales/zh_TW/messages.json
@@ -21,9 +21,9 @@
     "message": "自定義規則活躍中"
   },
   "contentScriptWarning": {
-    "message": "警告(Furigana Maker)：此頁面過大($htmlSize$KB)，自動模式已禁用。",
+    "message": "警告(Furigana Maker)：此頁面過大($textLength$字符)，自動模式已禁用。",
     "placeholders": {
-      "htmlSize": {
+      "textLength": {
         "content": "$1"
       }
     }
