--- a/packages/extension/public/_locales/zh_CN/messages.json
+++ b/packages/extension/public/_locales/zh_CN/messages.json
@@ -17,8 +17,11 @@
   "shortcutToggleFuriganaDisplay": {
     "message": "切换所有页面的注音假名显示模式"
   },
-  "extTitleSuffix": {
-    "message": "自定义规则活跃中"
+  "extTitleActivated": {
+    "message": "自动模式已启用"
+  },
+  "extTitleDisabled": {
+    "message": "自动模式已禁用"
   },
   "contentScriptWarning": {
     "message": "警告(Furigana Maker)：此页面过大($textLength$字符)，自动模式已禁用。",
