--- a/packages/extension/public/_locales/zh_TW/messages.json
+++ b/packages/extension/public/_locales/zh_TW/messages.json
@@ -17,8 +17,11 @@
   "shortcutToggleFuriganaDisplay": {
     "message": "切換所有頁面的注音假名顯示模式"
   },
-  "extTitleSuffix": {
-    "message": "自定義規則活躍中"
+  "extTitleActivated": {
+    "message": "自動模式已啟用"
+  },
+  "extTitleDisabled": {
+    "message": "自動模式已禁用"
   },
   "contentScriptWarning": {
     "message": "警告(Furigana Maker)：此頁面過大($textLength$字符)，自動模式已禁用。",
