--- a/packages/extension/public/_locales/ko/messages.json
+++ b/packages/extension/public/_locales/ko/messages.json
@@ -17,8 +17,11 @@
   "shortcutToggleFuriganaDisplay": {
     "message": "모든 페이지에서 후리가나 표시 모드 전환"
   },
-  "extTitleSuffix": {
-    "message": "사용자 규칙 활성화"
+  "extTitleActivated": {
+    "message": "자동 모드가 활성화되었습니다"
+  },
+  "extTitleDisabled": {
+    "message": "자동 모드가 비활성화되었습니다"
   },
   "contentScriptWarning": {
     "message": "경고(Furigana Maker): 이 페이지는 너무 큽니다($textLength$자), 자동 모드가 비활성화됩니다.",
