feat: allow users to customize Kanji filter (#348)
* fix: font size is too small, which is related to tailwind v4

* chore: update pnpm

* fix: icons on the sidebar are incorrect

* feat: rename "Rules editor" page to "Selector"

* chore: update outdated biome vscode configuration

* feat: change the Selector page icon to `i-tabler-click`

* feat(wip): add Kanji Filter page placeholder

* refactor: store Kanji filter rules in indexeddb

* chore: dup key

* chore: add comment

* fix: `isLoading` variable should not be modified before loading is complete

* chore: comment style

* refactor: using `??` and `?.`

* refactor: extract `getDB` util

* feat(wip): display the data in indexeddb on the options page

* fix: mobile devices cannot trigger hover, resulting in inaccessible delete entry

* feat: allows to delete specific kanji filter

* refactor: rename components

* fix: react error "Each child in a list should have a unique "key" prop"

* fix: react error "Invalid prop data-headlessui-state supplied to React.Fragment."

* chore: import tailwind-merge and clsx

* refactor: rename "reading" to "katakanas"

* feat(wip): allow edit existed kanji filter rules

* fix: missing i18n

* fix: placeholder text typo

* style: adjust padding

* style: add required tag

* feat: allows reset config

* feat: allow clear config

* style: adjust padding when the yomikata count is 0

* chore: fix typo

* feat: allow add new rule

* style: the plus icon does not hide when typing yomikata continuously

* style: add placeholder

* feat: allows clear config

* style: add element order tag

* fix: extra single quotes in yomikata

* chore: adjust user guide

* style: adjust icon color

* style: adjust disabled state style

* feat: verify that the input must be kanji and katakana

* chore: adjust text

* feat: allow import json data

* feat: add "required" error message

* fix: react error "In HTML, <button> cannot be a descendant of <button>."

* style: adjust required tag location to bef

--- a/apps/extension/src/assets/_locales/en/translation.json
+++ b/apps/extension/src/assets/_locales/en/translation.json
@@ -53,15 +53,15 @@
   "fieldSelector": "selector",
   "fieldDomain": "domain",
   "submit": "Submit",
-  "titleEditorDialog": "{{verbs}} your custom rule",
+  "titleEditSelectorDialog": "{{verbs}} your custom selector",
   "create": "Create",
   "update": "Update",
   "btnEdit": "Edit",
   "btnDelete": "Delete",
-  "msgDeleteRule": "The deletion rule is not undoable, sure about this?",
+  "msgDeleteRule": "This deletion cannot be undone, are you sure?",
   "markActive": "Active",
   "markInactive": "Inactive",
-  "navEditRules": "Rules editor",
+  "navSelector": "Selector",
   "navChangelog": "Changelog",
   "navSettings": "Settings",
   "navPopup": "Popup",
@@ -89,5 +89,27 @@
   "messageEmptyList": " The list is empty, please add it first.",
   "btnResetConfig": "Reset Config",
   "resetWarning": "Are you sure you want to reset the rule list to its initial state?",
-  "undoneDesc": "This action cannot be undone."
+  "undoneDesc": "This action cannot be undone.",
+  "navKanjiFilter": "Kanji Filter",
+  "msgDeleteKanjiFilterDesc": "You are deleting the kanji filter corresponding to \"{{kanji}}\".",
+  "btnQuickCreate": "Quick Create",
+  "quickCreateModalTitle": "Quickly create batch kanji filters",
+  "quickCreateModalDesc1": "Please separate them with spaces or line breaks. Enter a large number of kanji words and the corresponding kanji filter will be auto created for you.",
+  "quickCreateModalDesc2": "Non-pure kanji words will be filtered. If the input kanji already has yomikatas recorded in the system, the corresponding yomikatas will be cleared and replaced with the \"Match ALL\" mode.",
+  "btnConfirm": "Confirm",
+  "clearConfigDialogTitle": "Are you sure you want to clear the rule list?",
+  "btnClearConfig": "Clear Config",
+  "createKanjiFilterDialogTitle": "How to use kanji filter?",
+  "createKanjiFilterDialogDesc1": "Please use the web search tool in your browser to search for a specific kanji or yomikata, then click the button to start editing. Also, the yomikata must be in katakana format, romaji or hiragana are not accepted.",
+  "createKanjiFilterDialogDesc2": "The \"Match ALL\" toggle cannot coexist with the yomokatas field. If you switch to this mode, the original yomokatas field will be cleared and cannot be retrieved.",
+  "titleKanjiFilterEditor": "{{verbs}} your kanji filter",
+  "validationRequired": "Required.",
+  "validationPureKanji": "Must be pure Japanese kanji.",
+  "validationNonRepetitiveKanji": "This kanji is already in use.",
+  "validationPureKatakana": "Must be pure katakana.",
+  "fieldYomikata": "Yomikata",
+  "fieldMatchAll": "Match ALL",
+  "btnAddKatakana": "Add katakana",
+  "inputProhibitedTip": "Input is prohibited.",
+  "fieldKanji": "Kanji"
 }
