--- a/apps/extension/src/assets/_locales/ja/translation.json
+++ b/apps/extension/src/assets/_locales/ja/translation.json
@@ -51,9 +51,9 @@
   "msgSelectorMerge": "<codeSelector/> フィールドはカンマで区切られており、同じ <codeDomain/> に対応するセレクタが直接マージされます。",
   "cssSelector": "CSSセレクタ",
   "fieldSelector": "セレクタ",
-  "fieldDomain": "ドメイン",
+  "fieldDomain": "ドメイン名",
   "submit": "送信",
-  "titleEditorDialog": "{{verbs}} あなたのカスタムルール",
+  "titleEditSelectorDialog": "{{verbs}} あなたのカスタムルール",
   "create": "作成",
   "update": "更新",
   "btnEdit": "編集",
@@ -61,7 +61,7 @@
   "msgDeleteRule": "削除ルールは元に戻せません。よろしいですか？",
   "markActive": "アクティブ",
   "markInactive": "非アクティブ",
-  "navEditRules": "ルールエディタ",
+  "navSelector": "セレクター",
   "navChangelog": "変更履歴",
   "navSettings": "設定",
   "navPopup": "ポップアップ",
@@ -89,5 +89,27 @@
   "settingsExclusionList": "以下のサイトは決してふりがなを付けません",
   "btnResetConfig": "設定をリセット",
   "resetWarning": "ルールリストを初期状態にリセットしてもよろしいですか?",
-  "undoneDesc": "この操作は元に戻すことができません。"
+  "undoneDesc": "この操作は元に戻すことができません。",
+  "btnAddKatakana": "カタカナを追加します",
+  "btnClearConfig": "設定をクリア",
+  "btnConfirm": "確認する",
+  "btnQuickCreate": "クイック作成",
+  "clearConfigDialogTitle": "ルールリストをクリアしたいですか？",
+  "createKanjiFilterDialogDesc1": "ブラウザのWeb検索ツールを使用して、特定の漢字または読み方を検索し、ボタンをクリックして編集を開始します。\nまた、読み方はカタカナ形式である必要があります。ロマジーまたはヒラガナは受け入れられません。",
+  "createKanjiFilterDialogDesc2": "「すべて」モードは、読み方フィールドと共存できません。\nこのモードに切り替えると、元の読み方フィールドがクリアされ、取得できません。",
+  "createKanjiFilterDialogTitle": "漢字フィルターの使用方法は？",
+  "fieldMatchAll": "すべて",
+  "fieldYomikata": "読み方",
+  "inputProhibitedTip": "入力は禁止されています。",
+  "msgDeleteKanjiFilterDesc": "「{{kanji}}」に対応する漢字フィルターを削除します。",
+  "navKanjiFilter": "漢字フィルター",
+  "quickCreateModalDesc1": "スペースやラインブレークで分離してください。\n多数の漢字の言葉を入力すると、対応する漢字フィルターがあなたのために自動作成されます。",
+  "quickCreateModalDesc2": "非純粋な漢字の言葉はフィルタリングされます。\n入力漢字が既に読み方をシステムに記録している場合、対応する読み方はクリアされ、「すべて」モードに置き換えられます。",
+  "quickCreateModalTitle": "バッチカンジフィルターをすばやく作成します",
+  "titleKanjiFilterEditor": "{{verbs}}漢字フィルター",
+  "validationNonRepetitiveKanji": "この漢字はすでに使用されています。",
+  "validationPureKanji": "純粋な日本の漢字でなければなりません。",
+  "validationPureKatakana": "純粋なカタカナでなければなりません。",
+  "validationRequired": "必須。",
+  "fieldKanji": "漢字"
 }
