--- a/apps/extension/src/assets/_locales/zh-CN/translation.json
+++ b/apps/extension/src/assets/_locales/zh-CN/translation.json
@@ -53,7 +53,7 @@
   "fieldSelector": "选择器",
   "fieldDomain": "域名",
   "submit": "提交",
-  "titleEditorDialog": "{{verbs}}你的自定义规则",
+  "titleEditSelectorDialog": "{{verbs}}你的自定义规则",
   "create": "创建",
   "update": "更新",
   "btnEdit": "编辑",
@@ -61,7 +61,7 @@
   "msgDeleteRule": "删除规则不可撤销，确定要这样做吗？",
   "markActive": "已激活",
   "markInactive": "未激活",
-  "navEditRules": "规则编辑器",
+  "navSelector": "选择器",
   "navChangelog": "更新日志",
   "navSettings": "设置",
   "navPopup": "弹出窗口",
@@ -89,5 +89,27 @@
   "settingsExclusionList": "以下网站从不添加注音假名",
   "btnResetConfig": "重置配置",
   "resetWarning": "您确定要将规则列表重置为其初始状态吗？",
-  "undoneDesc": "此操作无法撤消。"
+  "undoneDesc": "此操作无法撤消。",
+  "btnAddKatakana": "添加片假名",
+  "btnClearConfig": "清除配置",
+  "btnConfirm": "确认",
+  "btnQuickCreate": "快速创建",
+  "clearConfigDialogTitle": "您确定要清除规则列表吗？",
+  "createKanjiFilterDialogDesc1": "请在浏览器中使用Web搜索工具搜索特定的汉字或Yomikata，然后单击按钮开始编辑。\n另外，Yomikata必须采用片假名格式，不接受罗马音和平假名。",
+  "createKanjiFilterDialogDesc2": "“匹配全部”模式不能与Yomokata字段共存。\n如果切换到此模式，将清除原始的Yomokata字段，无法恢复。",
+  "createKanjiFilterDialogTitle": "如何使用汉字过滤器？",
+  "fieldMatchAll": "匹配全部",
+  "fieldYomikata": "Yomikata",
+  "inputProhibitedTip": "禁止输入。",
+  "msgDeleteKanjiFilterDesc": "您正在删除对应于“{{kanji}}”的汉字过滤器。",
+  "navKanjiFilter": "汉字过滤器",
+  "quickCreateModalDesc1": "请用空格或换行分隔。\n批量输入汉字单词，将为您创建相应的汉字过滤器。",
+  "quickCreateModalDesc2": "非汉字单词将被过滤。\n如果输入汉字已经在系统中记录了Yomikata，则将清除相应的Yomikata并用“匹配全部”模式替换。",
+  "quickCreateModalTitle": "快速批量创建汉字过滤器",
+  "titleKanjiFilterEditor": "{{verbs}}您的汉字过滤器",
+  "validationNonRepetitiveKanji": "这个汉字已经在使用。",
+  "validationPureKanji": "必须是纯粹的日本汉字。",
+  "validationPureKatakana": "必须是纯粹的katakana。",
+  "validationRequired": "必需的。",
+  "fieldKanji": "汉字"
 }
