--- a/apps/extension/src/assets/_locales/zh-TW/translation.json
+++ b/apps/extension/src/assets/_locales/zh-TW/translation.json
@@ -42,7 +42,7 @@
   "msgNotFound": "請新增規則，或匯入現有設定檔（JSON 格式），否則此擴充將不會執行任何操作。",
   "msgSelectorMerge": "<codeSelector/>欄位之間以逗號分隔，相同<codeDomain/>對應的選擇器將直接合併。",
   "navChangelog": "變更日誌",
-  "navEditRules": "規則編輯器",
+  "navSelector": "選擇器",
   "navManageShortcuts": "管理快捷方式",
   "navOfficialSite": "官方網站",
   "navPopup": "彈出視窗",
@@ -79,7 +79,7 @@
   "tipRefreshPage": "請重新整理頁面",
   "tipShareOn": "在 {{media}} 上分享",
   "titleEditor": "使用者規則編輯器",
-  "titleEditorDialog": "{{verbs}} 您的自訂規則",
+  "titleEditSelectorDialog": "{{verbs}} 您的自訂規則",
   "titleNotFound": "未找到規則",
   "titleWarning": "警告！",
   "toggleAutoMode": "開關自動模式",
@@ -89,5 +89,27 @@
   "yourTips": "您的建議",
   "btnResetConfig": "重置配置",
   "resetWarning": "您確定要將規則清單重設為其初始狀態嗎？",
-  "undoneDesc": "此操作無法撤銷。"
+  "undoneDesc": "此操作無法撤銷。",
+  "btnAddKatakana": "新增片假名",
+  "btnClearConfig": "清除配置",
+  "btnConfirm": "確認",
+  "btnQuickCreate": "快速創建",
+  "clearConfigDialogTitle": "您確定要清除規則列表嗎？",
+  "createKanjiFilterDialogDesc1": "請在瀏覽器中使用Web搜索工具搜索特定的漢字或Yomikata，然後單擊按鈕開始編輯。另外，Yomikata必須採用片假名格式，不接受羅馬音和平假名。",
+  "createKanjiFilterDialogDesc2": "“匹配全部”模式不能與Yomokata字段共存。如果切換到此模式，將清除原始的Yomokata字段，無法檢索。",
+  "createKanjiFilterDialogTitle": "如何使用漢字過濾器？",
+  "fieldMatchAll": "匹配全部",
+  "fieldYomikata": "Yomikata",
+  "inputProhibitedTip": "禁止輸入。",
+  "msgDeleteKanjiFilterDesc": "您正在刪除對應於“{{kanji}}”的漢字過濾器。",
+  "navKanjiFilter": "漢字過濾器",
+  "quickCreateModalDesc1": "請用空格或換行分開。輸入大量漢字單詞，將為您創建相應的漢字過濾器。",
+  "quickCreateModalDesc2": "非漢字單詞將被過濾。如果輸入漢字已經在系統中記錄了Yomikata，則將清除相應的Yomikata並用“匹配全部”模式替換。",
+  "quickCreateModalTitle": "快速創建批次漢字過濾器",
+  "titleKanjiFilterEditor": "{{verbs}}您的漢字過濾器",
+  "validationNonRepetitiveKanji": "這個漢字已經在使用。",
+  "validationPureKanji": "必須是純粹的日本漢字。",
+  "validationPureKatakana": "必須是純粹的片假名。",
+  "validationRequired": "必需的。",
+  "fieldKanji": "漢字"
 }
