--- a/apps/extension/src/assets/_locales/ko/translation.json
+++ b/apps/extension/src/assets/_locales/ko/translation.json
@@ -53,7 +53,7 @@
   "fieldSelector": "선택기",
   "fieldDomain": "도메인",
   "submit": "제출",
-  "titleEditorDialog": "{{verbs}} 사용자 정의 규칙",
+  "titleEditSelectorDialog": "{{verbs}} 사용자 정의 규칙",
   "create": "생성",
   "update": "업데이트",
   "btnEdit": "수정",
@@ -61,7 +61,7 @@
   "msgDeleteRule": "삭제된 규칙은 복구할 수 없습니다. 계속 하시겠습니까?",
   "markActive": "활성화됨",
   "markInactive": "비활성화됨",
-  "navEditRules": "규칙 편집기",
+  "navSelector": "선택자",
   "navChangelog": "변경 로그",
   "navSettings": "설정",
   "navPopup": "팝업",
@@ -89,5 +89,27 @@
   "settingsExclusionList": "다음 사이트에서는 후리가나를 절대 추가하지 않습니다.",
   "btnResetConfig": "구성 재설정",
   "resetWarning": "규칙 목록을 초기 상태로 재설정하시겠습니까?",
-  "undoneDesc": "이 작업은 취소할 수 없습니다."
+  "undoneDesc": "이 작업은 취소할 수 없습니다.",
+  "btnAddKatakana": "Katakana를 추가하십시오",
+  "btnClearConfig": "명확한 구성",
+  "btnConfirm": "확인하다",
+  "btnQuickCreate": "빠른 생성",
+  "clearConfigDialogTitle": "규칙 목록을 지우고 싶습니까?",
+  "createKanjiFilterDialogDesc1": "브라우저의 웹 검색 도구를 사용하여 특정 Kanji 또는 Yomikata를 검색 한 다음 버튼을 클릭하여 편집을 시작하십시오. \n또한 Yomikata는 Katakana 형식으로되어 있어야하며 Romaji 또는 Hiragana는 허용되지 않습니다.",
+  "createKanjiFilterDialogDesc2": "\"All All\"토글은 Yomokatas 필드와 공존 할 수 없습니다. \n이 모드로 전환하면 원래 Yomokatas 필드가 지워지고 검색 할 수 없습니다.",
+  "createKanjiFilterDialogTitle": "Kanji 필터를 사용하는 방법?",
+  "fieldMatchAll": "모두 일치합니다",
+  "fieldYomikata": "요키타",
+  "inputProhibitedTip": "입력은 금지됩니다.",
+  "msgDeleteKanjiFilterDesc": "\"{{kanji}}\"에 해당하는 Kanji 필터를 삭제하고 있습니다.",
+  "navKanjiFilter": "Kanji 필터",
+  "quickCreateModalDesc1": "공백이나 선 파손으로 분리하십시오. \n많은 Kanji 단어를 입력하면 해당 Kanji 필터가 자동으로 만들어집니다.",
+  "quickCreateModalDesc2": "비 푸시 칸지 단어는 필터링됩니다. \n입력 Kanji에 이미 시스템에 Yomikatas가 기록되어 있으면 해당 Yomikatas가 지워지고 \"모든 일치\"모드로 교체됩니다.",
+  "quickCreateModalTitle": "배치 칸 지 필터를 신속하게 만듭니다",
+  "titleKanjiFilterEditor": "{{verbs}} Kanji 필터",
+  "validationNonRepetitiveKanji": "이 Kanji는 이미 사용 중입니다.",
+  "validationPureKanji": "순수한 일본 한자 여야합니다.",
+  "validationPureKatakana": "순수한 카타 카나 여야합니다.",
+  "validationRequired": "필수의.",
+  "fieldKanji": "칸지"
 }
