feat: new furigana display mode, masking the furigana with the background color (#358)

--- a/apps/extension/src/assets/_locales/en/translation.json
+++ b/apps/extension/src/assets/_locales/en/translation.json
@@ -9,6 +9,7 @@
   "optionAlwaysShow": "Always Show",
   "optionNeverShow": "Never Show",
   "optionHoverGap": "Hover Gap",
+  "optionHoverMask": "Hover Mask",
   "optionHoverNoGap": "Hover No Gap",
   "optionDefault": "Default",
   "optionOriginal": "Original",
