--- a/apps/extension/src/assets/_locales/zh-TW/translation.json
+++ b/apps/extension/src/assets/_locales/zh-TW/translation.json
@@ -50,8 +50,9 @@
   "optionAlwaysShow": "始終顯示",
   "optionDefault": "預設",
   "optionHiragana": "平假名",
-  "optionHoverGap": "懸停間隙",
-  "optionHoverNoGap": "懸停無間隙",
+  "optionHoverGap": "懸停顯示間隙",
+  "optionHoverNoGap": "懸停顯示無間隙",
+  "optionHoverMask": "懸停顯示遮罩",
   "optionKatakana": "片假名",
   "optionNeverShow": "從不顯示",
   "optionOriginal": "原文",
